@@ -300,11 +300,21 @@ int status_attrib(
 
           int found = 0;
           unsigned long remaining;
+          unsigned long upperBound;
 
           if (((pattr + JOB_ATR_resource)->at_val.at_list.ll_next != NULL) &&
               ((pattr + JOB_ATR_resource)->at_flags & ATR_VFLAG_SET))
             {
             pres = (resource *)GET_NEXT((pattr + JOB_ATR_resource)->at_val.at_list);
+
+            if ((pattr + JOB_ATR_comp_time)->at_flags & ATR_VFLAG_SET)
+              {
+              upperBound = (pattr + JOB_ATR_comp_time)->at_val.at_long;
+              }
+            else
+              {
+              upperBound = (unsigned long)time_now;
+              }
             
             /* find the walltime resource */
             for (;pres != NULL;pres = (resource *)GET_NEXT(pres->rs_link))
@@ -317,7 +327,7 @@ int status_attrib(
                 unsigned long value = (unsigned long)pres->rs_value.at_val.at_long;
                 if (((pattr+index)->at_flags & ATR_VFLAG_SET) != FALSE)
                   {
-                  remaining = value - (time_now - (pattr + index)->at_val.at_long);
+                  remaining = value - (upperBound - (pattr + index)->at_val.at_long);
                   }
                 else
                   {
